--- a/notebooks/projeto.ipynb
+++ b/notebooks/projeto.ipynb
@@ -6458,7 +6458,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.13 ('git')",
    "language": "python",
    "name": "python3"
   },
@@ -6472,9 +6472,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "0515c75371fd5f6929f0ea61616b9b5f73669eabf535376690c4e8d79f292411"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
